fixed page spacing, no <br>

--- a/labs/Lab4/css/screen.css
+++ b/labs/Lab4/css/screen.css
@@ -266,6 +266,12 @@ body {
     width: auto;
 }
 
+input {
+  display: block;
+  margin-bottom: 3%;
+  outline: none;    
+}
+
 input[type="email"], #name{
     font-family: 'Roboto', sans-serif;
     background-color: aliceblue;
